--- a/static/css/my-login.css
+++ b/static/css/my-login.css
@@ -14,7 +14,7 @@ body.my-login-page {
 }
 
 a:hover{
-    color: grey!important;
+    color: grey;
     font-weight: 400;
 }
 
@@ -95,3 +95,112 @@ a {
 		padding: 15px;
 	}
 }
+
+.sidebar-icon {
+	width: 50px;
+	height: 50px;
+	line-height: 50px;
+	border-radius: 50%;
+	border: 5px solid: #dddddd;
+	margin-right: 6px;
+}
+
+.mdl-button{
+	margin-bottom: 5px!important;
+}
+
+li {
+  margin-top: 15px;
+}
+
+.demo-layout-waterfall .mdl-layout__header-row .mdl-navigation__link:last-of-type  {
+    padding-right: 0;
+    text-decoration: none !important;
+}
+
+.demo-ribbon {
+  width: 100%;
+  height: 2vh;
+  align-content: center;
+  align-items: center;
+  background-color: #3F51B5;
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0;
+}
+
+.demo-main {
+  margin-top: -35vh;
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0;
+}
+
+.demo-container {
+  max-width: 1600px;
+  width: calc(100% - 16px);
+  margin: 0 auto;
+}
+
+.demo-content {
+  border-radius: 1rem;
+  padding: 80px 56px;
+  margin-bottom: 80px;
+}
+
+.demo-layout.is-small-screen .demo-content {
+  padding: 40px 28px;
+}
+
+.demo-content h3 {
+  margin-top: 48px;
+}
+
+.demo-footer {
+  padding-left: 40px;
+}
+
+.demo-footer .mdl-mini-footer--link-list a {
+  font-size: 14px;
+}
+
+.mdl-card {
+  border-radius: 1rem;
+  padding: 40px 28px;
+  overflow: hidden;
+  background: transparent;
+}
+
+.demo-content img {
+    width: 80px;
+	height: 80px;
+	line-height: 80px;
+	border-radius: 50%;
+	border: 5px solid: #dddddd;
+}
+
+.spacer{
+	margin-bottom: 40px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
