--- a/static/css/style.css
+++ b/static/css/style.css
@@ -101,12 +101,34 @@ a {
 	height: 50px;
 	line-height: 50px;
 	border-radius: 50%;
-	border: 5px solid: #dddddd;
+	border: 2px solid #dddddd;
 	margin-right: 6px;
 }
 
-.mdl-button{
+.service-icon {
+	width: 80px!important;
+	height: 80px!important;
+	line-height: 80px!important;
+	border-radius: 50%!important;
+	border: 1px solid #003168!important;
+	background: #ffffff!important;
+}
+
+
+
+.demo-layout.is-small-screen .demo-content .service-icon {
+	width: 50px!important;
+	height: 50px!important;
+	line-height: 50px!important;
+	border-radius: 50%!important;
+	border: 1px solid #003168!important;
+	background: #ffffff!important;
+}
+
+.btn{
 	margin-bottom: 5px!important;
+	font-size: 10px!important;
+	/*width: 100%;*/
 }
 
 li {
@@ -120,7 +142,7 @@ li {
 
 .demo-ribbon {
   width: 100%;
-  height: 2vh;
+  height: 40vh;
   align-content: center;
   align-items: center;
   background-color: #3F51B5;
@@ -137,7 +159,7 @@ li {
 }
 
 .demo-container {
-  max-width: 1600px;
+  max-width: 1000px;
   width: calc(100% - 16px);
   margin: 0 auto;
 }
@@ -146,10 +168,11 @@ li {
   border-radius: 1rem;
   padding: 80px 56px;
   margin-bottom: 80px;
+
 }
 
 .demo-layout.is-small-screen .demo-content {
-  padding: 40px 28px;
+  padding: 40px 18px;
 }
 
 .demo-content h3 {
@@ -165,23 +188,33 @@ li {
 }
 
 .mdl-card {
-  border-radius: 1rem;
-  padding: 40px 28px;
-  overflow: hidden;
-  background: transparent;
+  border-radius: 1rem!important;
+  padding: 40px 28px!important;
+  margin-bottom: 10px!important;
+  margin-right: 0px;
+  margin-left: 0px;
+
 }
 
-.demo-content img {
-    width: 80px;
-	height: 80px;
-	line-height: 80px;
+.mdl-card img {
+    width: 40px;
+	height: 40px;
+	line-height: 40px;
 	border-radius: 50%;
-	border: 5px solid: #dddddd;
+	border: 1px solid #dddddd;
 }
 
 .spacer{
 	margin-bottom: 40px;
 }
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 20px 0;
+}
+
 
 
 
