--- a/static/css/style.css
+++ b/static/css/style.css
@@ -125,7 +125,7 @@ a {
 	background: #ffffff!important;
 }
 
-.btn{
+.btns{
 	margin-bottom: 5px!important;
 	font-size: 10px!important;
 	/*width: 100%;*/
@@ -197,9 +197,9 @@ li {
 }
 
 .mdl-card img {
-    width: 40px;
-	height: 40px;
-	line-height: 40px;
+    width: 60px;
+	height: 60px;
+	line-height: 60px;
 	border-radius: 50%;
 	border: 1px solid #dddddd;
 }
